--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -41,4 +41,8 @@ jobs:
           scons pot
 
       - name: Convert markdown to pot
-        run: md2po -P ${{ github.event.inputs.repo }}/readme.md ${{ inputs.repoName }}
+        run: md2po -P ${{ github.event.inputs.repo }}/readme.md ${{ github.event.inputs.repo }}
+      - name: : List files
+        run: |
+          cd ${{ github.event.inputs.repo }}
+          ls
