--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           repository: nvdaaddons/${{ github.event.inputs.repo }}
-          path: ${{ github.event.inputs.repo
+          path: ${{ github.event.inputs.repo }}
       - name: Create add-on
         run: |
           cd ${{ github.event.inputs.repo }}
