--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -5,8 +5,7 @@ on:
     inputs:
       repo:
         description: 'Repository name'
-env:
-  repo: ${{ github.event.inputs.repo }}
+
 jobs:
   importToCrowdin:
     runs-on: ubuntu-latest
@@ -30,7 +29,7 @@ jobs:
       - name: Checkout add-on
         uses: actions/checkout@v4
         with:
-          repository: nvdaaddons/$repo
+          repository: nvdaaddons/${{ github.event.inputs.repo }}
           path: ${{ github.event.inputs.repo }}
       - name: Create add-on
         run: |
@@ -50,11 +49,13 @@ jobs:
           echo "Warning: Folder ${{  github.event.inputs.repo }}/addon/locale does not exist."
           fi
       - name: Move translated doc to add-on repo folder
+        env:
+          repo: ${{ github.event.repository.name}}
         run: |
-          cd ${{ github.event.inputs.repo }}
+          cd "$repo"
           mkdir doc
           cd doc
-          for file in "${{ github.workspace }}/addons/${{ github.event.inputs.repo }}.*.po"; do
+          for file in "${{ github.workspace }}/addons/$repo.*.po"; do
           lang = $(echo "$file" | sed "s/^${repo}\.\(.*\)\.po$/\1/") echo "$lang" 
           mkdir $lang
           mv "$file" "$lang"
