--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -49,14 +49,11 @@ jobs:
           echo "Warning: Folder ${{  github.event.inputs.repo }}/addon/locale does not exist."
           fi
       - name: Move translated doc to add-on repo folder
-        env:
-          repo: ${{ github.event.repository.name}}
         run: |
-          cd "$repo"
           mkdir doc
           cd doc
           for file in "${{ github.workspace }}/addons/$repo.*.po"; do
-          lang = $(echo "$file" | sed "s/^${repo}\.\(.*\)\.po$/\1/") echo "$lang" 
+          lang = $(echo "$file" | sed "s/^${{ github.event.inputs.repo }}\.\(.*\)\.po$/\1/") echo "$lang"
           mkdir $lang
           mv "$file" "$lang"
           done;
