--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -57,7 +57,7 @@ jobs:
           fi
       - name: Move translated doc to add-on repo folder
         run: |
-          for file in "${{ github.workspace }}/addons/${{ github.event.inputs.repo }}.*.po"; do
+          for file in "addons/${{ github.event.inputs.repo }}.*.po"; do
           lang = $(echo "$file" | sed "s/^${{ github.event.inputs.repo }}\.\(.*\)\.po$/\1/") echo "$lang"
           mv "$file" "$ {{github.event.inputs.repo }}/$lang"
           done;
