--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -62,10 +62,10 @@ jobs:
           if [ "$dirBasename" = "en" ] || [ "$dirBasename" = "style.css" ]; then
           continue
           fi
-          if [ -f "addons/${{ github.event.inputs.repo }}.$dir.po" ]; then
-            mv "addons/${{ github.event.inputs.repo }}.$dir.po" "$dir"
+          if [ -f "addons/${{ github.event.inputs.repo }}.$dirBasename.po" ]; then
+            mv "addons/${{ github.event.inputs.repo }}.$dirBasename.po" "$dir"
           else
-            echo "Warning: File addons/${{ github.event.inputs.repo }}.$dir.po does not exist."
+            echo "Warning: File addons/${{ github.event.inputs.repo }}.$dirBasename.po does not exist."
           fi
           done
       - name: List files
