--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -57,7 +57,7 @@ jobs:
           fi
       - name: Move translated doc to add-on repo folder
         run: |
-          for dir in "${{ github.event.inputs.repo }}/doc"; do
+          for dir in "${{ github.event.inputs.repo }}/doc/*"; do
           dirBasename=$(basename "$dir")
           if [ "$dirBasename" = "en" ] || [ "$dirBasename" = "style.css" ]; then
           continue
