--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -66,7 +66,7 @@ jobs:
           fi
           if [ -f "${{ github.workspace }}/addons/${{ github.event.inputs.repo }}.$dirBasename.po" ]; then
             mv "${{ github.workspace }}/addons/${{ github.event.inputs.repo }}.$dirBasename.po" "$dir"
-            mv $dir/${{ github.event.inputs.repo }}.$dirBasename.po" "$dir/readme.po"
+            mv "$dir/${{ github.event.inputs.repo }}.$dirBasename.po" "$dir/readme.po"
           else
             echo "Warning: File addons/${{ github.event.inputs.repo }}.$dirBasename.po does not exist."
           fi
