--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -79,10 +79,10 @@ jobs:
           upload_sources: true
           upload_translations: true
           auto_approve_imported: true
-          source: "${{ github.event.inputs.repo }}/${{ github.event.inputs.repo }}.pot"
+          source: ${{ github.event.inputs.repo }}/${{ github.event.inputs.repo }}.pot
           translation: |
-            "${{ github.event.inputs.repo }}/locale/%two_letters_code%/LC_MESSAGES/nvda.po"
-            "${{ github.event.inputs.repo }}/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po"
+            ${{ github.event.inputs.repo }}/locale/%two_letters_code%/LC_MESSAGES/nvda.po
+            ${{ github.event.inputs.repo }}/locale/%locale_with_underscore%/LC_MESSAGES/nvda.po
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
@@ -93,10 +93,10 @@ jobs:
           upload_sources: true
           upload_translations: true
           auto_approve_imported: true
-          source: "${{ github.event.inputs.repo }}/readme.pot"
+          source: ${{ github.event.inputs.repo }}/readme.pot
           translation: |
-            "${{ github.event.inputs.repo }}/doc/%two_letters_code%/readme.po"
-            "${{ github.event.inputs.repo }}/doc/%locale_with_underscore%/readme.po"
+            ${{ github.event.inputs.repo }}/doc/%two_letters_code%/readme.po
+            ${{ github.event.inputs.repo }}/doc/%locale_with_underscore%/readme.po
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
