--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -71,16 +71,14 @@ jobs:
             echo "Warning: File addons/${{ github.event.inputs.repo }}.$dirBasename.po does not exist."
           fi
           done
-      - name: Store input repo in env variable
-        run: echo "repo=${{ github.event.inputs.repo}}" >> $GITHUB_ENV
-      - name: List files
-        run: ls -R $repo
-      - name: Crowdin upload
+      - name: Crowdin upload doc main langs
         uses: crowdin/github-action@v2
         with:
           upload_sources: true
           upload_translations: true
           auto_approve_imported: true
+          source: ${{ github.event.inputs.repo }}/readme.pot
+          translation: ${{ github.event.inputs.repo }}/doc/%two_letters_code%/readme.po
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
