--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -75,26 +75,12 @@ jobs:
         run: echo "repo=${{ github.event.inputs.repo}}" >> $GITHUB_ENV
       - name: List files
         run: ls -R $repo
-      - name: Crowdin upload interface messages main langs
+      - name: Crowdin upload
         uses: crowdin/github-action@v2
         with:
           upload_sources: true
           upload_translations: true
           auto_approve_imported: true
-          source: ${{ github.event.inputs.repo }}/${{ github.event.inputs.repo }}.pot
-          translation: ${{ github.event.inputs.repo }}/locale/%two_letters_code%/LC_MESSAGES/nvda.po
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
-          CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_TOKEN }}
-      - name: Crowdin upload doc main langs
-        uses: crowdin/github-action@v2
-        with:
-          upload_sources: true
-          upload_translations: true
-          auto_approve_imported: true
-          source: ${{ github.event.inputs.repo }}/readme.pot
-          translation: ${{ github.event.inputs.repo }}/doc/%two_letters_code%/readme.po
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           CROWDIN_PROJECT_ID: ${{ vars.CROWDIN_ID }}
