--- a/crowdin.yml
+++ b/crowdin.yml
@@ -5,6 +5,7 @@
 
 "files": [
   {
+    # Replace with repo name, for example, objPad
     "source": "$repo/$repo.pot",
     "translation": "$repo/locale/%two_letters_code%/LC_MESSAGES/nvda.po"
   },
