--- a/.github/workflows/importToCrowdin.yml
+++ b/.github/workflows/importToCrowdin.yml
@@ -80,7 +80,7 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add .
+          git add crowdin.yml
           git commit -m "Update configuration to register ${{github.event.inputs.repo}}"
           git branch -u origin/master
           git pull
